[metadata]
name = networking-lagopus
summary = Neutron plugins/drivers for Lagopus switch
description-file =
    README.rst
author = Hirofumi Ichihara
author_email = ichihara.hirofumi@gmail.com
url = https://github.com/hichihara
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    networking_lagopus

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    neutron-lagopus-agent = networking_lagopus.cmd.eventlet.lagopus_agent:main
neutron.ml2.mechanism_drivers =
    lagopus = networking_lagopus.ml2.mech_driver.mech_lagopus:LagopusMechanismDriver

[wheel]
universal = 1